opam-version: "2.0"

name: "morbig"
version: "0.10.3"

synopsis: "A trustworthy parser for POSIX shell"
description: """
Morbig is a parser for shell scripts written in the POSIX shell script
language. It parses the scripts statically, that is without executing
them, and constructs a concrete syntax tree for each of them. The
concrete syntax trees are built using constructors according to the
shell grammar of the POSIX standard.
"""

maintainer: "Nicolas Jeannerod <nicolas.jeannerod@irif.fr>"
authors: [
  "Yann Régis-Gianas <yann.regis-gianas@irif.fr>"
  "Ralf Treinen <ralf.treinen@irif.fr>"
  "Nicolas Jeannerod <nicolas.jeannerod@irif.fr>"
]
license: "GPL3"

homepage: "https://github.com/colis-anr/morbig"
bug-reports: "https://github.com/colis-anr/morbig/issues"
dev-repo: "git://github.com/colis-anr/morbig.git"

depends: [
  "dune"                 {build & >= "1.4.0"}
  "menhir"               {>= "20170509"}
  "ocaml"                {>= "4.04"}
  "odoc"                 {with-doc}
  "ppx_deriving_yojson"
  "visitors"             {>= "20180513"}
  "yojson"               {>= "1.6.0"}
]

build: ["dune" "build" "-p" name "-j" jobs]
run-test: [make "check"]
